--- a/notice.html
+++ b/notice.html
@@ -35,7 +35,7 @@
 						<ul class="menu">
 							<li class="sidebar-title">Menu</li>
 
-							<li class="sidebar-item active">
+							<li class="sidebar-item">
 								<a href="index.html" class="sidebar-link">
 									<i class="bi bi-grid-fill"></i>
 									<span>Dashboard</span>
@@ -64,7 +64,7 @@
 								</ul>
 							</li>
 
-							<li class="sidebar-item">
+							<li class="sidebar-item active">
 								<a href="notice.html" class="sidebar-link">
 									<i class="bi bi-bell-fill"></i>
 									<span>Notice</span>
@@ -83,79 +83,57 @@
 				</header>
 
 				<div class="page-heading">
-					<h3>Dashboard</h3>
+					<div class="row">
+						<div class="col-12 col-md-6 order-md-1 order-last">
+							<h3>Notice</h3>
+							<!-- <p class="text-subtitle text-muted">Give textual form controls like input upgrade with custom styles, sizing, focus states, and more.</p> -->
+						</div>
+						<div class="col-12 col-md-6 order-md-2 order-first">
+							<nav aria-label="breadcrumb" class="breadcrumb-header float-start float-lg-end">
+								<ol class="breadcrumb">
+									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item active" aria-current="page">Notice</li>
+								</ol>
+							</nav>
+						</div>
+					</div>
 				</div>
 				<div class="page-content">
-					<section class="row">
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon purple">
-												<i class="iconly-boldShow"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Profile Views</h6>
-											<h6 class="font-extrabold mb-0">112.000</h6>
-										</div>
-									</div>
-								</div>
+					<!-- ========================================
+            Content goes here
+            ========================================== -->
+
+					<!-- Notice Start -->
+					<section class="section">
+						<div class="card">
+							<div class="card-header">
+								<h4 class="card-title">Notice Panel</h4>
 							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon blue">
-												<i class="iconly-boldProfile"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Followers</h6>
-											<h6 class="font-extrabold mb-0">183.000</h6>
-										</div>
-									</div>
+
+							<div class="card-body">
+								<div class="input-group mb-3">
+									<input type="text" class="form-control" placeholder="Enter A Notice" aria-label="Enter A Notice" />
+									<button class="btn btn-danger" id="">
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+											<path
+												d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
+											></path>
+										</svg>
+									</button>
 								</div>
-							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon green">
-												<i class="iconly-boldAdd-User"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Following</h6>
-											<h6 class="font-extrabold mb-0">80.000</h6>
-										</div>
-									</div>
+								<div class="mb-3">
+									<button type="button" class="btn btn-info btn-sm">
+										<svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+											<path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"></path>
+										</svg>
+										Add New Notice
+									</button>
 								</div>
-							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon red">
-												<i class="iconly-boldBookmark"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Saved Post</h6>
-											<h6 class="font-extrabold mb-0">112</h6>
-										</div>
-									</div>
-								</div>
+								<button type="submit" class="btn btn-primary">Save</button>
 							</div>
 						</div>
 					</section>
+					<!-- Notice End -->
 				</div>
 
 				<!-- <footer>
