--- a/settings.html
+++ b/settings.html
@@ -35,14 +35,14 @@
 						<ul class="menu">
 							<li class="sidebar-title">Menu</li>
 
-							<li class="sidebar-item active">
+							<li class="sidebar-item">
 								<a href="index.html" class="sidebar-link">
 									<i class="bi bi-grid-fill"></i>
 									<span>Dashboard</span>
 								</a>
 							</li>
 
-							<li class="sidebar-item">
+							<li class="sidebar-item active">
 								<a href="settings.html" class="sidebar-link">
 									<i class="bi bi-gear"></i>
 									<span>Settings</span>
@@ -83,79 +83,97 @@
 				</header>
 
 				<div class="page-heading">
-					<h3>Dashboard</h3>
+					<div class="row">
+						<div class="col-12 col-md-6 order-md-1 order-last">
+							<h3>Settings</h3>
+							<!-- <p class="text-subtitle text-muted">Give textual form controls like input upgrade with custom styles, sizing, focus states, and more.</p> -->
+						</div>
+						<div class="col-12 col-md-6 order-md-2 order-first">
+							<nav aria-label="breadcrumb" class="breadcrumb-header float-start float-lg-end">
+								<ol class="breadcrumb">
+									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item active" aria-current="page">Settings</li>
+								</ol>
+							</nav>
+						</div>
+					</div>
 				</div>
 				<div class="page-content">
-					<section class="row">
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon purple">
-												<i class="iconly-boldShow"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Profile Views</h6>
-											<h6 class="font-extrabold mb-0">112.000</h6>
-										</div>
-									</div>
-								</div>
+					<!-- ========================================
+            Content goes here
+            ========================================== -->
+
+					<!-- User Setting Start -->
+					<section class="section">
+						<div class="card">
+							<div class="card-header">
+								<h4 class="card-title">User Settings</h4>
 							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon blue">
-												<i class="iconly-boldProfile"></i>
+
+							<div class="card-body">
+								<form class="row">
+									<div class="col-md-6">
+										<label for="userName">User Name</label>
+										<div class="form-group position-relative has-icon-left">
+											<input type="text" id="userName" class="form-control" placeholder="User Name" />
+											<div class="form-control-icon">
+												<i class="bi bi-person"></i>
 											</div>
 										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Followers</h6>
-											<h6 class="font-extrabold mb-0">183.000</h6>
-										</div>
 									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon green">
-												<i class="iconly-boldAdd-User"></i>
+									<div class="col-md-6">
+										<label for="masjidName">Masjid Name</label>
+										<div class="form-group position-relative has-icon-left">
+											<input type="text" id="masjidName" class="form-control" placeholder="Masjid Name" />
+											<div class="form-control-icon">
+												<i class="bi bi-house"></i>
 											</div>
 										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Following</h6>
-											<h6 class="font-extrabold mb-0">80.000</h6>
-										</div>
 									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-6 col-lg-3 col-md-6">
-							<div class="card">
-								<div class="card-body px-3 py-4-5">
-									<div class="row">
-										<div class="col-md-4">
-											<div class="stats-icon red">
-												<i class="iconly-boldBookmark"></i>
-											</div>
-										</div>
-										<div class="col-md-8">
-											<h6 class="text-muted font-semibold">Saved Post</h6>
-											<h6 class="font-extrabold mb-0">112</h6>
-										</div>
+									<div class="col-12">
+										<button type="submit" class="btn btn-primary">Save</button>
 									</div>
-								</div>
+								</form>
 							</div>
 						</div>
 					</section>
+					<!-- User Setting End -->
+
+					<!-- Account Setting Start -->
+					<section class="section">
+						<div class="card">
+							<div class="card-header">
+								<h4 class="card-title">Account Settings</h4>
+							</div>
+
+							<div class="card-body">
+								<form class="row">
+									<div class="col-md-6">
+										<label for="currentPassword">Current Password</label>
+										<div class="form-group position-relative has-icon-left">
+											<input type="password" id="currentPassword" class="form-control" placeholder="Current Password" />
+											<div class="form-control-icon">
+												<i class="bi bi-lock"></i>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-6">
+										<label for="newPassword">New Password</label>
+										<div class="form-group position-relative has-icon-left">
+											<input type="password" id="newPassword" class="form-control" placeholder="New Password" />
+											<div class="form-control-icon">
+												<i class="bi bi-lock-fill"></i>
+											</div>
+										</div>
+									</div>
+									<div class="col-12">
+										<button type="submit" class="btn btn-primary">Save</button>
+									</div>
+								</form>
+							</div>
+						</div>
+					</section>
+					<!-- Account Setting End -->
 				</div>
 
 				<!-- <footer>
