--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<i class="bi bi-list-ul"></i>
 									<span>Manage Time</span>
 								</a>
-								<ul class="submenu" style="display: block">
+								<ul class="submenu" style="display: none">
 									<li class="submenu-item">
 										<a href="regular-salat-time.html">General Time</a>
 									</li>
