--- a/notice.html
+++ b/notice.html
@@ -54,7 +54,7 @@
 									<i class="bi bi-list-ul"></i>
 									<span>Manage Time</span>
 								</a>
-								<ul class="submenu" style="display: block">
+								<ul class="submenu" style="display: none">
 									<li class="submenu-item">
 										<a href="regular-salat-time.html">General Time</a>
 									</li>
@@ -111,25 +111,30 @@
 							</div>
 
 							<div class="card-body">
-								<div class="input-group mb-3">
-									<input type="text" class="form-control" placeholder="Enter A Notice" aria-label="Enter A Notice" />
-									<button class="btn btn-danger" id="">
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
-											<path
-												d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
-											></path>
-										</svg>
-									</button>
-								</div>
-								<div class="mb-3">
-									<button type="button" class="btn btn-info btn-sm">
-										<svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
-											<path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"></path>
-										</svg>
-										Add New Notice
-									</button>
-								</div>
-								<button type="submit" class="btn btn-primary">Save</button>
+								<form action="">
+									<div id="noticeContainer">
+										<div class="notice-item input-group mb-3" id="notice-0">
+											<input type="text" name="notice" class="form-control" placeholder="Enter A Notice" aria-label="Enter A Notice" />
+											<button type="button" onclick="deleteNotice('notice-0')" class="btn btn-danger" id="">
+												<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
+													<path
+														d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
+													></path>
+												</svg>
+											</button>
+										</div>
+									</div>
+
+									<div class="mb-3">
+										<button type="button" id="addNotice" class="btn btn-info btn-sm">
+											<svg class="me-2" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
+												<path d="M8 0a1 1 0 0 1 1 1v6h6a1 1 0 1 1 0 2H9v6a1 1 0 1 1-2 0V9H1a1 1 0 0 1 0-2h6V1a1 1 0 0 1 1-1z"></path>
+											</svg>
+											Add New Notice
+										</button>
+									</div>
+									<button type="submit" class="btn btn-primary">Save</button>
+								</form>
 							</div>
 						</div>
 					</section>
