--- a/template.html
+++ b/template.html
@@ -10,10 +10,12 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.css" />
 
 		<link rel="stylesheet" href="assets/vendors/iconly/bold.css" />
+		<link rel="stylesheet" href="assets/vendors/flatpicker.js/flatpickr.min.css" />
 
 		<link rel="stylesheet" href="assets/vendors/perfect-scrollbar/perfect-scrollbar.css" />
 		<link rel="stylesheet" href="assets/vendors/bootstrap-icons/bootstrap-icons.css" />
 		<link rel="stylesheet" href="assets/css/app.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
 		<link rel="shortcut icon" href="assets/images/favicon.svg" type="image/x-icon" />
 	</head>
 
@@ -35,13 +37,6 @@
 						<ul class="menu">
 							<li class="sidebar-title">Menu</li>
 
-							<li class="sidebar-item active">
-								<a href="index.html" class="sidebar-link">
-									<i class="bi bi-grid-fill"></i>
-									<span>Dashboard</span>
-								</a>
-							</li>
-
 							<li class="sidebar-item">
 								<a href="settings.html" class="sidebar-link">
 									<i class="bi bi-gear"></i>
@@ -56,7 +51,7 @@
 								</a>
 								<ul class="submenu" style="display: none">
 									<li class="submenu-item">
-										<a href="regular-salat-time.html">General Time</a>
+										<a href="general-time.html">General Time</a>
 									</li>
 									<li class="submenu-item">
 										<a href="jamat-time.html">Jamat Time</a>
@@ -68,6 +63,13 @@
 								<a href="notice.html" class="sidebar-link">
 									<i class="bi bi-bell-fill"></i>
 									<span>Notice</span>
+								</a>
+							</li>
+
+							<li class="sidebar-item active">
+								<a href="index.html" class="sidebar-link">
+									<i class="bi bi-grid-fill"></i>
+									<span>Dashboard</span>
 								</a>
 							</li>
 						</ul>
@@ -108,9 +110,12 @@
 		<script src="assets/vendors/perfect-scrollbar/perfect-scrollbar.min.js"></script>
 		<script src="assets/js/bootstrap.bundle.min.js"></script>
 
-		<script src="assets/vendors/apexcharts/apexcharts.js"></script>
-		<script src="assets/js/pages/dashboard.js"></script>
+		<script src="assets/vendors/flatpicker.js/flatpickr.js"></script>
+
+		<!-- <script src="assets/vendors/apexcharts/apexcharts.js"></script> -->
+		<!-- <script src="assets/js/pages/dashboard.js"></script> -->
 
 		<script src="assets/js/main.js"></script>
+		<script src="assets/js/custom.js"></script>
 	</body>
 </html>
